compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__invalid_const_name.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: const myInvalid_Constant = 42
---
error: Invalid name
  ┌─ /src/one/two.gleam:1:7
  │
1 │ const myInvalid_Constant = 42
  │       ^^^^^^^^^^^^^^^^^^ This is not a valid name

Hint: Names start with a lowercase letter and contain a-z, 0-9, or _.
Try: my_invalid_constant
